--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 <body>
 	<h1>Minimalistic Audio Recorder</h1>
 	<button id="recordButton">Record</button>
+	<button id="stopButton" disabled>Stop</button>
 	<audio id="audioPlayer"></audio>
 
 	<script>
 		const recordButton = document.getElementById('recordButton');
+		const stopButton = document.getElementById('stopButton');
 		const audioPlayer = document.getElementById('audioPlayer');
+		let mediaRecorder;
+		let chunks = [];
 
 		async function startRecording() {
 			try {
 				const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-				const mediaRecorder = new MediaRecorder(stream);
-				const chunks = [];
+				mediaRecorder = new MediaRecorder(stream);
 
 				mediaRecorder.addEventListener('dataavailable', e => {
 					chunks.push(e.data);
@@ -33,16 +36,20 @@
 				mediaRecorder.start();
 
 				recordButton.disabled = true;
-				mediaRecorder.addEventListener('stop', () => {
-					recordButton.disabled = false;
-				});
+				stopButton.disabled = false;
 			} catch (error) {
 				console.log('Error: ', error);
 			}
 		}
 
+		function stopRecording() {
+			mediaRecorder.stop();
+			recordButton.disabled = false;
+			stopButton.disabled = true;
+		}
+
 		recordButton.addEventListener('click', startRecording);
+		stopButton.addEventListener('click', stopRecording);
 	</script>
 </body>
 </html>
-
